feat: re-add credits screen, add localization in GUI

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -30,3 +30,15 @@ where_do_you_want_to_place_your_worker = Dove vuoi posizionare il tuo worker?
 you_are_the_first_player_in_the_server = Sei il primo giocatore nel server
 you_can_choose_one_of_these_gods = Puoi scegliere una di queste divinita'
 you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il worker nella cella specificata
+settings = Impostazioni
+credits = Credits
+menu = Menu'
+connect = Connettiti
+connect_to_server_prompt_1 = Pronto a Sfidare altri Giocatori?
+connect_to_server_prompt_2 = Digita l'indirizzo IP e la porta del server per trovare una partita!
+server_found = Server trovato!
+nickname_prompt = Digita il tuo nickname per cominciare a giocare!
+set_nickname = Imposta il nickname
+credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
+  Sviluppato per la prova finale di Ingegneria del Software da:\n\n\
+  Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nSotto la supervisione del prof. Cugola
