--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -1,6 +1,6 @@
 choose_d_gods_that_will_be_available = Choose the %d gods that will be available in this match
 choose_the_god_d = Choose the god %d
-choose_the_player_that_will_start_first = Choose the player that will start firdt
+choose_the_player_that_will_start_first = Choose the player that will start first
 choose_your_god = Choose your god
 default = default
 disconnected_from_the_server = Disconnected from the server. See you soon!
@@ -30,3 +30,16 @@ where_do_you_want_to_place_your_worker = Where do you want to place your worker?
 you_are_the_first_player_in_the_server = You are the first player in the server
 you_can_choose_one_of_these_gods = You can choose one of these gods
 you_cant_place_the_worker_in_the_specified_cell = You can't place the worker in the specified cell
+join_lobby = Join Lobby
+settings = Settings
+credits = Credits
+menu = Menu
+connect = Connect
+connect_to_server_prompt_1 = Ready to Challenge other Players?
+connect_to_server_prompt_2 = Type in the Server's IP Address and Port to find a match!
+server_found = Server Found!
+nickname_prompt = Type your nickname to start playing!
+set_nickname = Set Nickname
+credits_text = Adaptation of the "Santorini" game by Cranio Creations Srl.\n\n\
+  Written for the final software engineering project by:\n\n\
+  Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nUnder the supervision of prof. Cugola
