--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -42,3 +42,5 @@ set_nickname = Imposta il nickname
 credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
   Sviluppato per la prova finale di Ingegneria del Software da:\n\n\
   Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nSotto la supervisione del prof. Cugola
+error_invalid_nickname = Nickname non valido!
+error_nickname_taken = Nickname già presente!
