--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -43,5 +43,6 @@ set_nickname = Set Nickname
 credits_text = Adaptation of the "Santorini" game by Cranio Creations Srl.\n\n\
   Written for the final software engineering project by:\n\n\
   Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nUnder the supervision of prof. Cugola
-error_invalid_nickname = Invalid nickname!
+error_invalid_nickname_generic = Invalid nickname!
+error_invalid_nickname_length = Nickname is too long! (30 characters at most)
 error_nickname_taken = Nickname is already taken!
