chore: add i18n for all gods
This was annoying AF

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -45,3 +45,39 @@ credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
 error_invalid_nickname_generic = Nickname non valido!
 error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
 error_nickname_taken = Nickname già presente!
+
+apollo_name=Apollo
+artemis_name=Artemide
+athena_name=Atena
+atlas_name=Atlante
+demeter_name=Demetra
+hephaestus_name=Efesto
+hera_name=Hera
+hestia_name=Estia
+minotaur_name=Minotauro
+pan_name=Pan
+prometheus_name=Prometeo
+
+apollo_subtitle=Il dio della musica
+artemis_subtitle=La dea della caccia
+athena_subtitle=La dea della saggezza
+atlas_subtitle=Il titano che regge sulle spalle la volta celeste
+demeter_subtitle=La dea del raccolto
+hephaestus_subtitle=Il dio delle fucine
+hera_subtitle=La dea del matrimonio
+hestia_subtitle=La dea del focolare e della casa
+minotaur_subtitle=Il mostro dalla testa di toro
+pan_subtitle=Il dio della natura selvaggia
+prometheus_subtitle=Il titano benefattore dell'umanità
+
+apollo_description=Tuo spostamento: il tuo lavoratore può spostarsi nella casella di un lavoratore avversario (usando le normali regole di spostamento) e costringerlo a occupare la casella appena liberata, scambiando le posizioni.
+artemis_description=Tuo spostamento: il tuo lavoratore può spostarsi una volta in più, ma non può tornare alla casella da cui è partito.
+athena_description=Turno dell'avversario: se nel tuo ultimo turno uno dei tuoi lavoratori è salito di livello, in questo turno i lavoratori avversari non possono salire di livello.
+atlas_description=Tua costruzione: il tuo lavoratore può costruire una cupola su qualsiasi livello, compreso il terreno.
+demeter_description=Tua costruzione: il tuo lavoratore può costruire una volta in più, ma non nella stessa casella.
+hephaestus_description=Tua costruzione: il tuo lavoratore puà costruire un blocco aggiuntivo (non una cupola) al di sopra del primo blocco.
+hera_description=Turno dell'avversario: un avversario non può vincere spsotandosi su una casella perimetrale.
+hestia_description=Tua costruzione: il tuo lavoratore può costruire una volta in più, anche nella stessa casella; la costruzione aggiuntiva, però, non può avvenire su una casella perimetrale.
+minotaur_description=Tuo spostamento: il tuo lavoratore può spostarsi nella casella di un lavoratore avversario (in base alle normali regole di spostamento) se la casella successiva nella stessa direzione è libera. Il lavoratore avversario è costretto a spostarsi in quella casella (indipendentemente dal livello).
+pan_description=Condizione di vittoria: vinci anche se il tuo lavoratore è sceso di due o più livelli.
+prometheus_description=Tuo turno: se il tuo lavoratore non sale di livello, può costruire sia prima, sia dopo essere stato mosso.
