feat: finalized aesthetics for Ask Gods from List
TODO: finish choosing functionalities and synchronize between god list and scroll pane content

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -47,38 +47,38 @@ error_invalid_nickname_generic = Invalid nickname!
 error_invalid_nickname_length = Nickname is too long! (30 characters at most)
 error_nickname_taken = Nickname is already taken!
 
-apollo_name=apollo
-artemis_name=artemis
-athena_name=athena
-atlas_name=atlas
-demeter_name=demeter
-hephaestus_name=hephaestus
-hera_name=hera
-hestia_name=hestia
-minotaur_name=minotaur
-pan_name=pan
-prometheus_name=prometheus
+apollo_name=Apollo
+artemis_name=Artemis
+athena_name=Athena
+atlas_name=Atlas
+demeter_name=Demeter
+hephaestus_name=Hephaestus
+hera_name=Hera
+hestia_name=Hestia
+minotaur_name=Minotaur
+pan_name=Pan
+prometheus_name=Prometheus
 
-apollo_subtitle=god of music
-artemis_subtitle=goddess of the hunt
-athena_subtitle=goddess of wisdom
-atlas_subtitle=titan shouldering the heavens
-demeter_subtitle=goddess of the harvest
-hephaestus_subtitle=god of blacksmiths
-hera_subtitle=goddess of marriage
-hestia_subtitle=goddess of hearth and home
-minotaur_subtitle=bull-headed monster
-pan_subtitle=god of the wild
-prometheus_subtitle=titan benefactor of mankind
+apollo_subtitle=God of Music
+artemis_subtitle=Goddess of the Hunt
+athena_subtitle=Goddess of Wisdom
+atlas_subtitle=Titan Shouldering the Heavens
+demeter_subtitle=Goddess of the Harvest
+hephaestus_subtitle=God of Blacksmiths
+hera_subtitle=Goddess of Marriage
+hestia_subtitle=Goddess of Hearth and Home
+minotaur_subtitle=Bull-headed Monster
+pan_subtitle=God of the Wild
+prometheus_subtitle=Titan Benefactor of Mankind
 
-apollo_description=your move: your worker may move into an opponent worker's space by forcing their worker to the space yours just vacated
-artemis_description=your move: your worker may move one additional time, but not back to its initial space.
-athena_description=opponent's turn: if one of your workers moved up on your last turn, opponent workers cannot move up this turn.
-atlas_description=your build: your worker may build a dome at any level.
-demeter_description=your build: your worker may build one additional time, but not on the same space.
-hephaestus_description=your build: your worker may build one additional block (not dome) on top of your first block.
-hera_description=opponent's turn: an opponent cannot win by moving into a perimeter space.
-hestia_description=your build: your worker may build one additional time, but this cannot be on a perimeter space.
-minotaur_description=your move: your worker may move into an opponent worker's space, if their worker can be forced one space straight backwards to an unoccopied space at any level.
-pan_description=win condition: you also win if your worker moves down two or more levels.
-prometheus_description=your turn: if your worker does not move up, it may build both before and after moving.
+apollo_description=Your move: Your worker may move into an opponent worker's space by forcing their worker to the space yours just vacated
+artemis_description=Your move: Your worker may move one additional time, but not back to its initial space.
+athena_description=Opponent's turn: If one of your workers moved up on your last turn, opponent workers cannot move up this turn.
+atlas_description=Your build: Your worker may build a dome at any level.
+demeter_description=Your build: Your worker may build one additional time, but not on the same space.
+hephaestus_description=Your build: Your worker may build one additional block (not dome) on top of your first block.
+hera_description=Opponent's turn: An opponent cannot win by moving into a perimeter space.
+hestia_description=Your build: Your worker may build one additional time, but this cannot be on a perimeter space.
+minotaur_description=Your move: Your worker may move into an opponent worker's space, if their worker can be forced one space straight backwards to an unoccopied space at any level.
+pan_description=Win condition: You also win if your worker moves down two or more levels.
+prometheus_description=Your turn: If your worker does not move up, it may build both before and after moving.
