feat: added waitPlayers screen and finalized players count screen

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -46,6 +46,10 @@ credits_text = Adaptation of the "Santorini" game by Cranio Creations Srl.\n\n\
 error_invalid_nickname_generic = Invalid nickname!
 error_invalid_nickname_length = Nickname is too long! (30 characters at most)
 error_nickname_taken = Nickname is already taken!
+two_players = Two players
+three_players = Three Players
+wait_players_prompt = Hold on while we find a worthy opponent...
+players_count_prompt = Choose the number of players for your match!
 
 apollo_name=Apollo
 artemis_name=Artemis
