--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -44,7 +44,11 @@ credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
   Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nSotto la supervisione del prof. Cugola
 error_invalid_nickname_generic = Nickname non valido!
 error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
+wait_players_prompt = Attendi mentre cerchiamo un degno avversario...
 error_nickname_taken = Nickname già presente!
+two_players = Due giocatori
+three_players = Tre giocatori
+players_count_prompt = Scegli il numero di giocatori per il tuo match!
 
 apollo_name=Apollo
 artemis_name=Artemide
