fix: show correct message while waiting for players to choose workers positions [skip ci]

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -24,6 +24,7 @@ unable_to_establish_connection_with_specified_server = Unable to establish a con
 wait_for_s_to_choose_their_god = Wait for %s to choose their god...
 wait_for_s_to_choose_the_gods = Wait for %s to choose the gods that will be available in this match...
 wait_for_s_to_choose_the_starting_player = Wait for %s to choose the starting player...
+wait_for_s_to_place_their_workers = Wait for %s to place their workers...
 waiting_for_the_other_players = Waiting for the other players...
 welcome_to_the_server_s = Welcome to the server, %s!
 where_do_you_want_to_place_your_worker = Where do you want to place your worker?
