--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -24,6 +24,7 @@ unable_to_establish_connection_with_specified_server = Impossibili connettersi c
 wait_for_s_to_choose_their_god = Attendi che %s scelga la sua divinita'...
 wait_for_s_to_choose_the_gods = Attendi che %s scelga le divinita' che saranno disponibili in questa partita...
 wait_for_s_to_choose_the_starting_player = Attendi che %s scelga il giocatore che iniziera' per primo...
+wait_for_s_to_place_their_workers = Attendi che %s posizioni i suoi worker...
 waiting_for_the_other_players = In attesa degli altri giocatori...
 welcome_to_the_server_s = Benvenuto nel server, %s!
 where_do_you_want_to_place_your_worker = Dove vuoi posizionare il tuo worker?
