feat: implement CLI Move ClientTurnState

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -1,6 +1,7 @@
 choose_d_gods_that_will_be_available = Choose the %d gods that will be available in this match
 choose_the_god_d = Choose the god %d
 choose_the_player_that_will_start_first = Choose the player that will start first
+choose_one_of_your_workers = Choose one of your workers
 choose_your_god = Choose your god
 default = default
 disconnected_from_the_server = Disconnected from the server. See you soon!
@@ -25,9 +26,11 @@ wait_for_s_to_choose_their_god = Wait for %s to choose their god...
 wait_for_s_to_choose_the_gods = Wait for %s to choose the gods that will be available in this match...
 wait_for_s_to_choose_the_starting_player = Wait for %s to choose the starting player...
 wait_for_s_to_place_their_workers = Wait for %s to place their workers...
+wait_for_s_to_perform_their_move = Wait for %s to perform their move...
 waiting_for_the_other_players = Waiting for the other players...
 welcome_to_the_server_s = Welcome to the server, %s!
 where_do_you_want_to_place_your_worker = Where do you want to place your worker?
+which_worker_do_you_want_to_move = Which worker do you want to move?
 you_are_the_first_player_in_the_server = You are the first player in the server
 you_can_choose_one_of_these_gods = You can choose one of these gods
 you_cant_place_the_worker_in_the_specified_cell = You can't place the worker in the specified cell
