feat: add passive screen for choosing gods

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -54,6 +54,7 @@ two_players = Two players
 three_players = Three Players
 wait_players_prompt = Hold on while we find a worthy opponent...
 players_count_prompt = Choose the number of players for your match!
+wait_player_choose_god_prompt = Prepare for the battle!
 
 apollo_name=Apollo
 artemis_name=Artemis
