--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -53,6 +53,7 @@ error_nickname_taken = Nickname già presente!
 two_players = Due giocatori
 three_players = Tre giocatori
 players_count_prompt = Scegli il numero di giocatori per il tuo match!
+wait_player_choose_god_prompt = Preparati per la Battaglia!
 
 apollo_name=Apollo
 artemis_name=Artemide
