feat: add support for Hypnus, Triton and Zeus in GUI

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -64,9 +64,12 @@ demeter_name=Demeter
 hephaestus_name=Hephaestus
 hera_name=Hera
 hestia_name=Hestia
+hypnus_name=Hypnus
 minotaur_name=Minotaur
 pan_name=Pan
 prometheus_name=Prometheus
+triton_name=Triton
+zeus_name=Zeus
 
 apollo_subtitle=God of Music
 artemis_subtitle=Goddess of the Hunt
@@ -76,9 +79,12 @@ demeter_subtitle=Goddess of the Harvest
 hephaestus_subtitle=God of Blacksmiths
 hera_subtitle=Goddess of Marriage
 hestia_subtitle=Goddess of Hearth and Home
+hypnus_subtitle=God of Sleep
 minotaur_subtitle=Bull-headed Monster
 pan_subtitle=God of the Wild
 prometheus_subtitle=Titan Benefactor of Mankind
+triton_subtitle=God of the Waves
+zeus_subtitle=God of the Sky
 
 apollo_description=Your move: Your worker may move into an opponent worker's space by forcing their worker to the space yours just vacated
 artemis_description=Your move: Your worker may move one additional time, but not back to its initial space.
@@ -88,6 +94,9 @@ demeter_description=Your build: Your worker may build one additional time, but n
 hephaestus_description=Your build: Your worker may build one additional block (not dome) on top of your first block.
 hera_description=Opponent's turn: An opponent cannot win by moving into a perimeter space.
 hestia_description=Your build: Your worker may build one additional time, but this cannot be on a perimeter space.
+hypnus_description=Start of Opponent's turn: If one of your opponent's Workers is higher than all of thair others, it cannot move.
 minotaur_description=Your move: Your worker may move into an opponent worker's space, if their worker can be forced one space straight backwards to an unoccopied space at any level.
 pan_description=Win condition: You also win if your worker moves down two or more levels.
 prometheus_description=Your turn: If your worker does not move up, it may build both before and after moving.
+triton_description=Your Move: Each time your Worker moves into a perimeter space, it may immediately move again.
+zeus_description=Your Build: Your Worker may build a block under itself.
