--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -63,9 +63,12 @@ demeter_name=Demetra
 hephaestus_name=Efesto
 hera_name=Hera
 hestia_name=Estia
+hypnus_name=Hypnos
 minotaur_name=Minotauro
 pan_name=Pan
 prometheus_name=Prometeo
+triton_name=Tritone
+zeus_name=Zeus
 
 apollo_subtitle=Il dio della musica
 artemis_subtitle=La dea della caccia
@@ -75,9 +78,12 @@ demeter_subtitle=La dea del raccolto
 hephaestus_subtitle=Il dio delle fucine
 hera_subtitle=La dea del matrimonio
 hestia_subtitle=La dea del focolare e della casa
+hypnus_subtitle=Il dio del sonno
 minotaur_subtitle=Il mostro dalla testa di toro
 pan_subtitle=Il dio della natura selvaggia
 prometheus_subtitle=Il titano benefattore dell'umanità
+triton_subtitle=Il dio delle onde
+zeus_subtitle=Il dio del cielo
 
 apollo_description=Tuo spostamento: il tuo lavoratore può spostarsi nella casella di un lavoratore avversario (usando le normali regole di spostamento) e costringerlo a occupare la casella appena liberata, scambiando le posizioni.
 artemis_description=Tuo spostamento: il tuo lavoratore può spostarsi una volta in più, ma non può tornare alla casella da cui è partito.
@@ -87,6 +93,9 @@ demeter_description=Tua costruzione: il tuo lavoratore può costruire una volta 
 hephaestus_description=Tua costruzione: il tuo lavoratore puà costruire un blocco aggiuntivo (non una cupola) al di sopra del primo blocco.
 hera_description=Turno dell'avversario: un avversario non può vincere spsotandosi su una casella perimetrale.
 hestia_description=Tua costruzione: il tuo lavoratore può costruire una volta in più, anche nella stessa casella; la costruzione aggiuntiva, però, non può avvenire su una casella perimetrale.
+hypnus_description=Inizio del turno dell'avversario: se uno dei lavoratori del tuo avversario si trova a un livello superiore rispetto agli altri lavoratori dello stesso giocatore, non può muoversi.
 minotaur_description=Tuo spostamento: il tuo lavoratore può spostarsi nella casella di un lavoratore avversario (in base alle normali regole di spostamento) se la casella successiva nella stessa direzione è libera. Il lavoratore avversario è costretto a spostarsi in quella casella (indipendentemente dal livello).
 pan_description=Condizione di vittoria: vinci anche se il tuo lavoratore è sceso di due o più livelli.
 prometheus_description=Tuo turno: se il tuo lavoratore non sale di livello, può costruire sia prima, sia dopo essere stato mosso.
+triton_description=Tuo spostamento: ogni volta che il tuo lavoratore si sposta su una casella perimetrale (terreno o blocco), può subito spostarsi di nuovo.
+zeus_description=Tua costruzione: il tuo lavoratore può costruire sotto di sè nella casella attuale, aumentandola di un livello.
