--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -1,3 +1,5 @@
+block = blocco
+choose_between_block_or_dome = Scegli tra BLOCCO o CUPOLA
 choose_d_gods_that_will_be_available = Scegli le %d divinita' che saranno disponibili in questa partita
 choose_the_god_d = Scegli la %d^ divinita'
 choose_the_player_that_will_start_first = Scegli il giocatore che iniziera' per primo
@@ -5,6 +7,8 @@ choose_one_of_your_workers = Seleziona uno dei tuoi worker
 choose_your_god = Scegli la tua divinita'
 default = default
 disconnected_from_the_server = Disconnesso dal server. A presto!
+do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
+dome = cupola
 e_g = es.
 error = Errore
 insert_a_valid_coordinate = Inserisci una coordinata valida
@@ -26,13 +30,21 @@ wait_for_s_to_choose_their_god = Attendi che %s scelga la sua divinita'...
 wait_for_s_to_choose_the_gods = Attendi che %s scelga le divinita' che saranno disponibili in questa partita...
 wait_for_s_to_choose_the_starting_player = Attendi che %s scelga il giocatore che iniziera' per primo...
 wait_for_s_to_place_their_workers = Attendi che %s posizioni i suoi worker...
+wait_for_s_to_perform_their_build = Attendi che %s costruisca...
 wait_for_s_to_perform_their_move = Attendi che %s muova un suo worker...
 waiting_for_the_other_players = In attesa degli altri giocatori...
 welcome_to_the_server_s = Benvenuto nel server, %s!
+where_do_you_want_to_build = Dove vuoi costruire?
 where_do_you_want_to_place_your_worker = Dove vuoi posizionare il tuo worker?
 which_worker_do_you_want_to_move = Quale worker vuoi muovere?
+which_worker_do_you_want_to_use_to_build = Quale worker vuoi usare per costruire?
+x_to_cancel = X per annullare
+x_to_skip = X per saltare
 you_are_the_first_player_in_the_server = Sei il primo giocatore nel server
 you_can_choose_one_of_these_gods = Puoi scegliere una di queste divinita'
+you_cant_build_in_the_specified_cell = Non puoi costruire nella cella specificata
+you_cant_build_with_the_specified_worker = Non puoi costruire con il worker specificato
+you_cant_move_the_specified_worker = Non puoi muovere il worker specificato
 you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il worker nella cella specificata
 settings = Impostazioni
 credits = Credits
