--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -67,6 +67,7 @@ three_players = Three Players
 wait_players_prompt = Hold on while we find a worthy opponent...
 players_count_prompt = Choose the number of players for your match!
 wait_player_choose_god_prompt = Prepare for the battle!
+ask_start_player_prompt = Ready to win?
 
 apollo_name=Apollo
 artemis_name=Artemis
