--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -66,6 +66,7 @@ two_players = Due giocatori
 three_players = Tre giocatori
 players_count_prompt = Scegli il numero di giocatori per il tuo match!
 wait_player_choose_god_prompt = Preparati per la Battaglia!
+ask_start_player_prompt = Pronto a vincere?
 
 apollo_name=Apollo
 artemis_name=Artemide
