feat: implement win state for cli

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -5,6 +5,7 @@ choose_the_god_d = Scegli la %d^ divinita'
 choose_the_player_that_will_start_first = Scegli il giocatore che iniziera' per primo
 choose_one_of_your_workers = Seleziona uno dei tuoi worker
 choose_your_god = Scegli la tua divinita'
+congratulations_you_won = Congratulazioni, hai vinto!
 default = default
 disconnected_from_the_server = Disconnesso dal server. A presto!
 do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
@@ -20,6 +21,7 @@ port = Porta
 players = Giocatori
 press_return_to_begin = Premi 'Invio' per cominciare...
 press_return_to_continue = Premi 'Invio' per continuare...
+s_won = %s ha vinto la partita
 server_address = Indirizzo del server
 the_chosen_god_is_invalid = La divinita' scelta non e' valida
 the_chosen_god_was_already_taken = La divinita' scelta e' gia' stata scelta da un altro giocatore
