--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -5,6 +5,7 @@ choose_the_god_d = Choose the god %d
 choose_the_player_that_will_start_first = Choose the player that will start first
 choose_one_of_your_workers = Choose one of your workers
 choose_your_god = Choose your god
+congratulations_you_won = Congratulations, you won!
 default = default
 disconnected_from_the_server = Disconnected from the server. See you soon!
 do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
@@ -20,6 +21,7 @@ port = Port
 players = Players
 press_return_to_begin = Press 'Return' to begin...
 press_return_to_continue = Press 'Return' to continue...
+s_won = %s won
 server_address = Server address
 the_chosen_god_is_invalid = The chosen god is invalid
 the_chosen_god_was_already_taken = The chosen god was already taken
