feat: continue implementation of board functionalities

--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -69,6 +69,8 @@ three_players = Tre giocatori
 players_count_prompt = Scegli il numero di giocatori per il tuo match!
 wait_player_choose_god_prompt = Preparati per la Battaglia!
 ask_start_player_prompt = Pronto a vincere?
+ask_worker_start_position_prompt = Scegli saggiamente...
+ask_worker_start_position_passive_prompt = Aspetta pazientemente...
 
 apollo_name=Apollo
 artemis_name=Artemide
