feat: add skip and cancel buttons

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -72,6 +72,8 @@ wait_player_choose_god_prompt = Prepare for the battle!
 ask_start_player_prompt = Ready to win?
 ask_worker_start_position_prompt = Choose wisely...
 ask_worker_start_position_passive_prompt = Wait patiently...
+skip=Skip
+cancel=Cancel
 
 apollo_name=Apollo
 artemis_name=Artemis
