--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -71,6 +71,8 @@ wait_player_choose_god_prompt = Preparati per la Battaglia!
 ask_start_player_prompt = Pronto a vincere?
 ask_worker_start_position_prompt = Scegli saggiamente...
 ask_worker_start_position_passive_prompt = Aspetta pazientemente...
+skip=Salta
+cancel=Cancella
 
 apollo_name=Apollo
 artemis_name=Artemide
