feat: add legend to cli [sonar]

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -12,8 +12,11 @@ do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
 dome = dome
 e_g = e.g.,
 error = Error
+ground = ground
+height_abbr = h.
 insert_a_valid_coordinate = Insert a valid coordinate
 is_not_an_integer = is not an integer
+legend = Legend
 looking_for_a_match = Looking for a match...
 nickname = Nickname
 number_of_players = Number of players
@@ -27,6 +30,7 @@ the_chosen_god_is_invalid = The chosen god is invalid
 the_chosen_god_was_already_taken = The chosen god was already taken
 the_chosen_player_is_invalid = The chosen player is invalid
 the_players_for_this_match_are = The players for this match are
+tower = tower
 unable_to_establish_connection_with_specified_server = Unable to establish a connection with the specified server
 wait_for_s_to_choose_their_god = Wait for %s to choose their god...
 wait_for_s_to_choose_the_gods = Wait for %s to choose the gods that will be available in this match...
