--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -12,8 +12,11 @@ do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
 dome = cupola
 e_g = es.
 error = Errore
+ground = terra
+height_abbr = alt.
 insert_a_valid_coordinate = Inserisci una coordinata valida
 is_not_an_integer = non e' un intero
+legend = Legenda
 looking_for_a_match = Ricerca di una partita...
 nickname = Nickname
 number_of_players = Numero di giocatori
@@ -27,6 +30,7 @@ the_chosen_god_is_invalid = La divinita' scelta non e' valida
 the_chosen_god_was_already_taken = La divinita' scelta e' gia' stata scelta da un altro giocatore
 the_chosen_player_is_invalid = Il giocatore scelto non e' valido
 the_players_for_this_match_are = I giocatori di questa partita sono
+tower = torre
 unable_to_establish_connection_with_specified_server = Impossibili connettersi con il server specificato
 wait_for_s_to_choose_their_god = Attendi che %s scelga la sua divinita'...
 wait_for_s_to_choose_the_gods = Attendi che %s scelga le divinita' che saranno disponibili in questa partita...
