feat: add gods translations and descriptions in cli [skip ci]

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -12,6 +12,7 @@ do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
 dome = dome
 e_g = e.g.,
 error = Error
+god = God
 ground = ground
 height_abbr = h.
 insert_a_valid_coordinate = Insert a valid coordinate
@@ -44,6 +45,7 @@ where_do_you_want_to_build = Where do you want to build?
 where_do_you_want_to_place_your_worker = Where do you want to place your worker?
 which_worker_do_you_want_to_move = Which worker do you want to move?
 which_worker_do_you_want_to_use_to_build = Which worker do you want to use to build?
+workers = Workers
 x_to_cancel = X to cancel
 x_to_skip = X to skip
 you_are_the_first_player_in_the_server = You are the first player in the server
