--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -12,6 +12,7 @@ do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
 dome = cupola
 e_g = es.
 error = Errore
+god = Divinità
 ground = terra
 height_abbr = alt.
 insert_a_valid_coordinate = Inserisci una coordinata valida
@@ -44,6 +45,7 @@ where_do_you_want_to_build = Dove vuoi costruire?
 where_do_you_want_to_place_your_worker = Dove vuoi posizionare il tuo worker?
 which_worker_do_you_want_to_move = Quale worker vuoi muovere?
 which_worker_do_you_want_to_use_to_build = Quale worker vuoi usare per costruire?
+workers = Workers
 x_to_cancel = X per annullare
 x_to_skip = X per saltare
 you_are_the_first_player_in_the_server = Sei il primo giocatore nel server
