feat: add lose/win screen for GUI

--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -55,6 +55,7 @@ you_cant_build_with_the_specified_worker = You can't build with the specified wo
 you_cant_move_the_specified_worker = You can't move the specified worker
 you_cant_place_the_worker_in_the_specified_cell = You can't place the worker in the specified cell
 join_lobby = Join Lobby
+join_another_lobby = Join Another Lobby
 settings = Settings
 credits = Credits
 menu = Menu
@@ -80,6 +81,8 @@ ask_worker_start_position_prompt = Choose wisely...
 ask_worker_start_position_passive_prompt = Wait patiently...
 skip=Skip
 cancel=Cancel
+victorious=You are victorious!
+loser=Better luck next time...
 
 
 apollo_name=Apollo
