--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -79,6 +79,10 @@ ask_worker_start_position_prompt = Scegli saggiamente...
 ask_worker_start_position_passive_prompt = Aspetta pazientemente...
 skip=Salta
 cancel=Cancella
+join_lobby=Unisciti ad una Partita
+join_another_lobby=Unisciti ad una nuova Partita
+victorious=Sei il vincitore!
+loser=Andrà meglio la prossima volta...
 
 apollo_name=Apollo
 artemis_name=Artemide
