--- a/src/main/resources/i18n/strings.properties
+++ b/src/main/resources/i18n/strings.properties
@@ -1,5 +1,6 @@
 block = block
 choose_between_block_or_dome = Choose between BLOCK or DOME
+choose_between_yes_or_no = Choose between YES or NO
 choose_d_gods_that_will_be_available = Choose the %d gods that will be available in this match
 choose_the_god_d = Choose the god %d
 choose_the_player_that_will_start_first = Choose the player that will start first
@@ -7,8 +8,9 @@ choose_one_of_your_workers = Choose one of your workers
 choose_your_god = Choose your god
 congratulations_you_won = Congratulations, you won!
 default = default
-disconnected_from_the_server = Disconnected from the server. See you soon!
+disconnected_from_the_server = You have been disconnected from the server. See you soon!
 do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
+do_you_want_to_start_a_new_match = Do you want to start a new match?
 dome = dome
 e_g = e.g.,
 error = Error
@@ -20,6 +22,7 @@ is_not_an_integer = is not an integer
 legend = Legend
 looking_for_a_match = Looking for a match...
 nickname = Nickname
+no = no
 number_of_players = Number of players
 port = Port
 players = Players
@@ -48,6 +51,7 @@ which_worker_do_you_want_to_use_to_build = Which worker do you want to use to bu
 workers = Workers
 x_to_cancel = X to cancel
 x_to_skip = X to skip
+yes = yes
 you_are_the_first_player_in_the_server = You are the first player in the server
 you_can_choose_one_of_these_gods = You can choose one of these gods
 you_cant_build_in_the_specified_cell = You can't build in the specified cell
