--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -1,5 +1,6 @@
 block = blocco
 choose_between_block_or_dome = Scegli tra BLOCCO o CUPOLA
+choose_between_yes_or_no = Scegli tra SI o NO
 choose_d_gods_that_will_be_available = Scegli le %d divinita' che saranno disponibili in questa partita
 choose_the_god_d = Scegli la %d^ divinita'
 choose_the_player_that_will_start_first = Scegli il giocatore che iniziera' per primo
@@ -7,8 +8,9 @@ choose_one_of_your_workers = Seleziona uno dei tuoi worker
 choose_your_god = Scegli la tua divinita'
 congratulations_you_won = Congratulazioni, hai vinto!
 default = default
-disconnected_from_the_server = Disconnesso dal server. A presto!
+disconnected_from_the_server = Sei stato disconnesso dal server. A presto!
 do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
+do_you_want_to_start_a_new_match = Vuoi iniziare una nuova partita?
 dome = cupola
 e_g = es.
 error = Errore
@@ -20,6 +22,7 @@ is_not_an_integer = non e' un intero
 legend = Legenda
 looking_for_a_match = Ricerca di una partita...
 nickname = Nickname
+no = no
 number_of_players = Numero di giocatori
 port = Porta
 players = Giocatori
@@ -48,6 +51,7 @@ which_worker_do_you_want_to_use_to_build = Quale worker vuoi usare per costruire
 workers = Workers
 x_to_cancel = X per annullare
 x_to_skip = X per saltare
+yes = si
 you_are_the_first_player_in_the_server = Sei il primo giocatore nel server
 you_can_choose_one_of_these_gods = Puoi scegliere una di queste divinita'
 you_cant_build_in_the_specified_cell = Non puoi costruire nella cella specificata
