feat: handle LoseGame in the client

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -10,6 +10,7 @@ congratulations_you_won = Congratulations, you won!
 default = default
 disconnected_from_the_server = You have been disconnected from the server. See you soon!
 do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
+do_you_want_to_keep_watching_the_game = Do you want to keep watching the game?
 do_you_want_to_start_a_new_match = Do you want to start a new match?
 dome = dome
 e_g = e.g.,
@@ -58,6 +59,7 @@ you_cant_build_in_the_specified_cell = You can't build in the specified cell
 you_cant_build_with_the_specified_worker = You can't build with the specified worker
 you_cant_move_the_specified_worker = You can't move the specified worker
 you_cant_place_the_worker_in_the_specified_cell = You can't place the worker in the specified cell
+you_lost = You lost.
 join_lobby = Join Lobby
 join_another_lobby = Join Another Lobby
 settings = Settings
