--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -10,6 +10,7 @@ congratulations_you_won = Congratulazioni, hai vinto!
 default = default
 disconnected_from_the_server = Sei stato disconnesso dal server. A presto!
 do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
+do_you_want_to_keep_watching_the_game = Vuoi continuare ad assistere come spettatore a questa partita?
 do_you_want_to_start_a_new_match = Vuoi iniziare una nuova partita?
 dome = cupola
 e_g = es.
@@ -58,6 +59,7 @@ you_cant_build_in_the_specified_cell = Non puoi costruire nella cella specificat
 you_cant_build_with_the_specified_worker = Non puoi costruire con il worker specificato
 you_cant_move_the_specified_worker = Non puoi muovere il worker specificato
 you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il worker nella cella specificata
+you_lost = You lost.
 settings = Impostazioni
 credits = Credits
 menu = Menu'
