chore: sort i18n strings file

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -1,12 +1,23 @@
+ask_start_player_prompt = Ready to win?
+ask_worker_start_position_passive_prompt = Wait patiently...
+ask_worker_start_position_prompt = Choose wisely...
 block = block
+cancel=Cancel
 choose_between_block_or_dome = Choose between BLOCK or DOME
 choose_between_yes_or_no = Choose between YES or NO
 choose_d_gods_that_will_be_available = Choose the %d gods that will be available in this match
+choose_one_of_your_workers = Choose one of your workers
 choose_the_god_d = Choose the god %d
 choose_the_player_that_will_start_first = Choose the player that will start first
-choose_one_of_your_workers = Choose one of your workers
 choose_your_god = Choose your god
 congratulations_you_won = Congratulations, you won!
+connect = Connect
+connect_to_server_prompt_1 = Ready to Challenge other Players?
+connect_to_server_prompt_2 = Type in the Server's IP Address and Port to find a match!
+credits = Credits
+credits_text = Adaptation of the "Santorini" game by Cranio Creations Srl.\n\n\
+Written for the final software engineering project by:\n\n\
+Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nUnder the supervision of prof. Cugola
 default = default
 disconnected_from_the_server = You have been disconnected from the server. See you soon!
 do_you_want_to_build_a_block_or_a_dome = Do you want to build a BLOCK or a DOME?
@@ -15,34 +26,53 @@ do_you_want_to_start_a_new_match = Do you want to start a new match?
 dome = dome
 e_g = e.g.,
 error = Error
+error_invalid_nickname_generic = Invalid nickname!
+error_invalid_nickname_length = Nickname is too long! (30 characters at most)
+error_nickname_taken = Nickname is already taken!
 god = God
 ground = ground
 height_abbr = h.
 insert_a_valid_coordinate = Insert a valid coordinate
 is_not_an_integer = is not an integer
+join_another_lobby = Join Another Lobby
+join_lobby = Join Lobby
 legend = Legend
 looking_for_a_match = Looking for a match...
+loser=Better luck next time...
+menu = Menu
 nickname = Nickname
+nickname_prompt = Type your nickname to start playing!
 no = no
 number_of_players = Number of players
-port = Port
 players = Players
+players_count_prompt = Choose the number of players for your match!
+port = Port
 press_return_to_begin = Press 'Return' to begin...
 press_return_to_continue = Press 'Return' to continue...
+rejoin_as_spectator = Rejoin as Spectator
 s_won = %s won
 server_address = Server address
+server_found = Server Found!
+set_nickname = Set Nickname
+settings = Settings
+skip=Skip
 the_chosen_god_is_invalid = The chosen god is invalid
 the_chosen_god_was_already_taken = The chosen god was already taken
 the_chosen_player_is_invalid = The chosen player is invalid
 the_players_for_this_match_are = The players for this match are
+three_players = Three Players
 tower = tower
+two_players = Two players
 unable_to_establish_connection_with_specified_server = Unable to establish a connection with the specified server
-wait_for_s_to_choose_their_god = Wait for %s to choose their god...
+victorious=You are victorious!
 wait_for_s_to_choose_the_gods = Wait for %s to choose the gods that will be available in this match...
 wait_for_s_to_choose_the_starting_player = Wait for %s to choose the starting player...
-wait_for_s_to_place_their_workers = Wait for %s to place their workers...
+wait_for_s_to_choose_their_god = Wait for %s to choose their god...
 wait_for_s_to_perform_their_build = Wait for %s to perform their build...
 wait_for_s_to_perform_their_move = Wait for %s to perform their move...
+wait_for_s_to_place_their_workers = Wait for %s to place their workers...
+wait_player_choose_god_prompt = Prepare for the battle!
+wait_players_prompt = Hold on while we find a worthy opponent...
 waiting_for_the_other_players = Waiting for the other players...
 welcome_to_the_server_s = Welcome to the server, %s!
 where_do_you_want_to_build = Where do you want to build?
@@ -60,35 +90,6 @@ you_cant_build_with_the_specified_worker = You can't build with the specified wo
 you_cant_move_the_specified_worker = You can't move the specified worker
 you_cant_place_the_worker_in_the_specified_cell = You can't place the worker in the specified cell
 you_lost = You lost.
-join_lobby = Join Lobby
-join_another_lobby = Join Another Lobby
-settings = Settings
-credits = Credits
-menu = Menu
-connect = Connect
-connect_to_server_prompt_1 = Ready to Challenge other Players?
-connect_to_server_prompt_2 = Type in the Server's IP Address and Port to find a match!
-server_found = Server Found!
-nickname_prompt = Type your nickname to start playing!
-set_nickname = Set Nickname
-credits_text = Adaptation of the "Santorini" game by Cranio Creations Srl.\n\n\
-  Written for the final software engineering project by:\n\n\
-  Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nUnder the supervision of prof. Cugola
-error_invalid_nickname_generic = Invalid nickname!
-error_invalid_nickname_length = Nickname is too long! (30 characters at most)
-error_nickname_taken = Nickname is already taken!
-two_players = Two players
-three_players = Three Players
-wait_players_prompt = Hold on while we find a worthy opponent...
-players_count_prompt = Choose the number of players for your match!
-wait_player_choose_god_prompt = Prepare for the battle!
-ask_start_player_prompt = Ready to win?
-ask_worker_start_position_prompt = Choose wisely...
-ask_worker_start_position_passive_prompt = Wait patiently...
-skip=Skip
-cancel=Cancel
-victorious=You are victorious!
-loser=Better luck next time...
 
 
 apollo_name=Apollo
