--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -1,12 +1,23 @@
+ask_start_player_prompt = Pronto a vincere?
+ask_worker_start_position_passive_prompt = Aspetta pazientemente...
+ask_worker_start_position_prompt = Scegli saggiamente...
 block = blocco
+cancel=Cancella
 choose_between_block_or_dome = Scegli tra BLOCCO o CUPOLA
 choose_between_yes_or_no = Scegli tra SI o NO
 choose_d_gods_that_will_be_available = Scegli le %d divinita' che saranno disponibili in questa partita
+choose_one_of_your_workers = Seleziona uno dei tuoi worker
 choose_the_god_d = Scegli la %d^ divinita'
 choose_the_player_that_will_start_first = Scegli il giocatore che iniziera' per primo
-choose_one_of_your_workers = Seleziona uno dei tuoi worker
 choose_your_god = Scegli la tua divinita'
 congratulations_you_won = Congratulazioni, hai vinto!
+connect = Connettiti
+connect_to_server_prompt_1 = Pronto a Sfidare altri Giocatori?
+connect_to_server_prompt_2 = Digita l'indirizzo IP e la porta del server per trovare una partita!
+credits = Credits
+credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
+Sviluppato per la prova finale di Ingegneria del Software da:\n\n\
+Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nSotto la supervisione del prof. Cugola
 default = default
 disconnected_from_the_server = Sei stato disconnesso dal server. A presto!
 do_you_want_to_build_a_block_or_a_dome = Vuoi costruire un BLOCCO o una CUPOLA?
@@ -15,34 +26,53 @@ do_you_want_to_start_a_new_match = Vuoi iniziare una nuova partita?
 dome = cupola
 e_g = es.
 error = Errore
+error_invalid_nickname_generic = Nickname non valido!
+error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
+error_nickname_taken = Nickname già presente!
 god = Divinità
 ground = terra
 height_abbr = alt.
 insert_a_valid_coordinate = Inserisci una coordinata valida
 is_not_an_integer = non e' un intero
+join_another_lobby=Unisciti ad una nuova Partita
+join_lobby=Unisciti ad una Partita
 legend = Legenda
 looking_for_a_match = Ricerca di una partita...
+loser=Andrà meglio la prossima volta...
+menu = Menu'
 nickname = Nickname
+nickname_prompt = Digita il tuo nickname per cominciare a giocare!
 no = no
 number_of_players = Numero di giocatori
-port = Porta
 players = Giocatori
+players_count_prompt = Scegli il numero di giocatori per il tuo match!
+port = Porta
 press_return_to_begin = Premi 'Invio' per cominciare...
 press_return_to_continue = Premi 'Invio' per continuare...
+rejoin_as_spectator = Rientra come spettatore
 s_won = %s ha vinto la partita
 server_address = Indirizzo del server
+server_found = Server trovato!
+set_nickname = Imposta il nickname
+settings = Impostazioni
+skip=Salta
 the_chosen_god_is_invalid = La divinita' scelta non e' valida
 the_chosen_god_was_already_taken = La divinita' scelta e' gia' stata scelta da un altro giocatore
 the_chosen_player_is_invalid = Il giocatore scelto non e' valido
 the_players_for_this_match_are = I giocatori di questa partita sono
+three_players = Tre giocatori
 tower = torre
+two_players = Due giocatori
 unable_to_establish_connection_with_specified_server = Impossibili connettersi con il server specificato
-wait_for_s_to_choose_their_god = Attendi che %s scelga la sua divinita'...
+victorious=Sei il vincitore!
 wait_for_s_to_choose_the_gods = Attendi che %s scelga le divinita' che saranno disponibili in questa partita...
 wait_for_s_to_choose_the_starting_player = Attendi che %s scelga il giocatore che iniziera' per primo...
-wait_for_s_to_place_their_workers = Attendi che %s posizioni i suoi worker...
+wait_for_s_to_choose_their_god = Attendi che %s scelga la sua divinita'...
 wait_for_s_to_perform_their_build = Attendi che %s costruisca...
 wait_for_s_to_perform_their_move = Attendi che %s muova un suo worker...
+wait_for_s_to_place_their_workers = Attendi che %s posizioni i suoi worker...
+wait_player_choose_god_prompt = Preparati per la Battaglia!
+wait_players_prompt = Attendi mentre cerchiamo un degno avversario...
 waiting_for_the_other_players = In attesa degli altri giocatori...
 welcome_to_the_server_s = Benvenuto nel server, %s!
 where_do_you_want_to_build = Dove vuoi costruire?
@@ -60,35 +90,6 @@ you_cant_build_with_the_specified_worker = Non puoi costruire con il worker spec
 you_cant_move_the_specified_worker = Non puoi muovere il worker specificato
 you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il worker nella cella specificata
 you_lost = You lost.
-settings = Impostazioni
-credits = Credits
-menu = Menu'
-connect = Connettiti
-connect_to_server_prompt_1 = Pronto a Sfidare altri Giocatori?
-connect_to_server_prompt_2 = Digita l'indirizzo IP e la porta del server per trovare una partita!
-server_found = Server trovato!
-nickname_prompt = Digita il tuo nickname per cominciare a giocare!
-set_nickname = Imposta il nickname
-credits_text = Adattamento del gioco "Santorini" di Cranio Creations Srl.\n\n\
-  Sviluppato per la prova finale di Ingegneria del Software da:\n\n\
-  Andrea Riva\n\nAlessandro Sanvito\n\nKien Tuong Truong\n\nSotto la supervisione del prof. Cugola
-error_invalid_nickname_generic = Nickname non valido!
-error_invalid_nickname_length = Nickname troppo lungo! (Max. 30 caratteri)
-wait_players_prompt = Attendi mentre cerchiamo un degno avversario...
-error_nickname_taken = Nickname già presente!
-two_players = Due giocatori
-three_players = Tre giocatori
-players_count_prompt = Scegli il numero di giocatori per il tuo match!
-wait_player_choose_god_prompt = Preparati per la Battaglia!
-ask_start_player_prompt = Pronto a vincere?
-ask_worker_start_position_prompt = Scegli saggiamente...
-ask_worker_start_position_passive_prompt = Aspetta pazientemente...
-skip=Salta
-cancel=Cancella
-join_lobby=Unisciti ad una Partita
-join_another_lobby=Unisciti ad una nuova Partita
-victorious=Sei il vincitore!
-loser=Andrà meglio la prossima volta...
 
 apollo_name=Apollo
 artemis_name=Artemide
