--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -97,7 +97,7 @@ athena_name=Atena
 atlas_name=Atlante
 demeter_name=Demetra
 hephaestus_name=Efesto
-hera_name=Hera
+hera_name=Era
 hestia_name=Estia
 hypnus_name=Hypnos
 minotaur_name=Minotauro
@@ -126,7 +126,7 @@ artemis_description=Tuo spostamento: il tuo lavoratore può spostarsi una volta 
 athena_description=Turno dell'avversario: se nel tuo ultimo turno uno dei tuoi lavoratori è salito di livello, in questo turno i lavoratori avversari non possono salire di livello.
 atlas_description=Tua costruzione: il tuo lavoratore può costruire una cupola su qualsiasi livello, compreso il terreno.
 demeter_description=Tua costruzione: il tuo lavoratore può costruire una volta in più, ma non nella stessa casella.
-hephaestus_description=Tua costruzione: il tuo lavoratore puà costruire un blocco aggiuntivo (non una cupola) al di sopra del primo blocco.
+hephaestus_description=Tua costruzione: il tuo lavoratore può costruire un blocco aggiuntivo (non una cupola) al di sopra del primo blocco.
 hera_description=Turno dell'avversario: un avversario non può vincere spsotandosi su una casella perimetrale.
 hestia_description=Tua costruzione: il tuo lavoratore può costruire una volta in più, anche nella stessa casella; la costruzione aggiuntiva, però, non può avvenire su una casella perimetrale.
 hypnus_description=Inizio del turno dell'avversario: se uno dei lavoratori del tuo avversario si trova a un livello superiore rispetto agli altri lavoratori dello stesso giocatore, non può muoversi.
