feat: add lateral labels for in game screen
Todo: add god info panel when clicking on name

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -90,7 +90,9 @@ you_cant_build_with_the_specified_worker = You can't build with the specified wo
 you_cant_move_the_specified_worker = You can't move the specified worker
 you_cant_place_the_worker_in_the_specified_cell = You can't place the worker in the specified cell
 you_lost = You lost.
-
+currently_playing = Currently playing
+waiting_for_their_turn = Waiting for their turn
+spectating = Spectating
 
 apollo_name=Apollo
 artemis_name=Artemis
