--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -90,6 +90,9 @@ you_cant_build_with_the_specified_worker = Non puoi costruire con il worker spec
 you_cant_move_the_specified_worker = Non puoi muovere il worker specificato
 you_cant_place_the_worker_in_the_specified_cell = Non puoi posizionare il worker nella cella specificata
 you_lost = You lost.
+currently_playing = Giocatore Attivo
+waiting_for_their_turn = In Attesa del proprio turno
+spectating = Spettatore
 
 apollo_name=Apollo
 artemis_name=Artemide
