feat: add color tip to lateral labels

--- a/src/main/resources/i18n/strings_en.properties
+++ b/src/main/resources/i18n/strings_en.properties
@@ -10,6 +10,7 @@ choose_one_of_your_workers = Choose one of your workers
 choose_the_god_d = Choose the god %d
 choose_the_player_that_will_start_first = Choose the player that will start first
 choose_your_god = Choose your god
+color = Color
 congratulations_you_won = Congratulations, you won!
 connect = Connect
 connect_to_server_prompt_1 = Ready to Challenge other Players?
