--- a/src/main/resources/i18n/strings_it.properties
+++ b/src/main/resources/i18n/strings_it.properties
@@ -10,6 +10,7 @@ choose_one_of_your_workers = Seleziona uno dei tuoi worker
 choose_the_god_d = Scegli la %d^ divinita'
 choose_the_player_that_will_start_first = Scegli il giocatore che iniziera' per primo
 choose_your_god = Scegli la tua divinita'
+color = Colore
 congratulations_you_won = Congratulazioni, hai vinto!
 connect = Connettiti
 connect_to_server_prompt_1 = Pronto a Sfidare altri Giocatori?
